Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18859

count mismatch in 2i test

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.5.0
    • 4.5.0
    • forestdb
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      2i CI starts to fail after picking up the following forestdb changes from master (count mismatch problem). This test run does not have any new 2i change, and the previous 2i test pass.

      Changes picked up from forestdb master
      indexing is at 4a31e8d, changes since last good build: none
      forestdb is at c3eb7ba, changes since last good build:
      c3eb7ba MB-18747 Don't grab spinlock when decrementing a file's ref counter
      923d253 MB-18846: Update minimum cmake version required
      1abf325 Real Use Case Simulation with Configurable Disk behaviour
      2641acc MB-18753: Retain offset of immediately deleted docs
      f7c15a5 MB-18747 Get rid of locking on closing dirty index node snapshot
      bf67fcb MB-18765 Abort the 2nd phase of compaction on rollback request
      889f945 alloca needs include of alloca.h on Solaris

      Error
      2016/03/23 12:20:12 Expected scan count 110402 does not match actual scan count 110281
      — FAIL: TestLargeMutations (210.99s)
      common_test.go:102: Error in scan result validation: Expected scan count 110402 does not match actual scan count 110281

      Test
      http://ci2i.northscale.in/gsi-fdb-23.03.2016-11.34.fail.html

      Attachments

        Issue Links

          Activity

            People

              chiyoung Chiyoung Seo (Inactive)
              jliang John Liang
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty