MB-18859 Add more flags for dirty index updates

- A dirty node (a set of dirty index blocks) once copied to newer
dirty node doesn't need to be copied again. Added a new flag for
it.

- A dirty index block once became immutable should not be copied to
newer node. Calling filemgr_is_writable() alone is not enough due to
circular block reuse; if the block is reclaimed, it becomes writable
again. Added a new flag indicating the immutability.

Change-Id: I3b1099f7b6450242ea8684056c2d04f927e8cbc9
Reviewed-on: http://review.couchbase.org/62170
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Chiyoung Seo <chiyoung@couchbase.com>
Reviewed-by: Sundararaman Sridharan <sundar@couchbase.com>